--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+src/api/functionNeeder.js
+src/api/SpotifyPlayer.js
+src/api/swl.js
+
+.env
+
+src/del.json
