--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@material-ui/core": "4.11.0",
+    "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "4.0.0-alpha.56",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "axios": "0.27.2",
+    "dotenv": "8.2.0",
+    "grade-js": "1.0.10",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-flip-move": "3.0.4",
+    "react-redux": "7.2.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "redux": "4.0.5",
+    "sass": "1.49.11",
+    "use-sound": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
